--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "COVID Shield",
-  "name": "COVID Shield",
+  "short_name": "GENDO Studio",
+  "name": "GENDO Studio",
   "icons": [
     {
       "src": "/android-chrome-192x192.png",
